Empty state alert spacing bug fixed. (#128)

--- a/src/SFA.DAS.ProviderApprenticeshipsService.Web/src/sass/_custom.scss
+++ b/src/SFA.DAS.ProviderApprenticeshipsService.Web/src/sass/_custom.scss
@@ -46,6 +46,7 @@
 //bulk upload styles
 
 #apprentice-details{
+    .alert-default{margin-top:25px;}
     .flash-alert{
         border-color:$turquoise;
          .icon-green-tick{
